[Fix] Run larastan workflow only when PHP files change

--- a/.github/workflows/larastan.yml
+++ b/.github/workflows/larastan.yml
@@ -2,11 +2,11 @@ name: Larastan
 
 on:
   push:
-    paths-ignore:
-      - '**.md'
+    paths:
+      - '**.php'
   pull_request:
-    paths-ignore:
-      - '**.md'
+    paths:
+      - '**.php'
   workflow_dispatch:
 
 jobs:
